2007-07-31  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangleselecttool.c
	* app/tools/gimprectangletool.c: formatting.

2007-07-31  Sven Neumann  <sven@gimp.org>

	* app/widgets/gimptoolview.c (gimp_tool_view_eye_clicked): don't
	leak the GtkTreePath.

2007-07-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tile.c: this plug-in doesn't need a tile cache.

2007-07-30  Sven Neumann  <sven@gimp.org>

	* app/plug-in/gimpplugin.[ch]: don't call gp_quit_write() on a
	plug-in with a broken pipe. Fixes bug #460878.

2007-07-30  Sven Neumann  <sven@gimp.org>

	* libgimp/gimp.c
	* libgimpbase/gimpwire.c: cosmetic changes.

2007-07-30  Sven Neumann  <sven@gimp.org>

	* app/core/gimpimage.c (gimp_image_drawable_update): cosmetics.

2007-07-29  Sven Neumann  <sven@gimp.org>

	* app/file/file-open.c
	* app/plug-in/plug-in-icc-profile.c: minor cleanups.

2007-07-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/tiff-load.c
	* plug-ins/common/tiff-save.c: use g_open() to open the file.
	Should fix filename encoding problems on Win32 (bug #461449).

2007-07-29  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/lcms.c: also calculate the checksum when loading
	the RGB profile from disk (bug #456017).

2007-07-27  Sven Neumann  <sven@gimp.org>

	* plug-ins/common/jigsaw.c: applied patch from Aurimas Juška
	that changes the Jigsaw plug-in to use a GimpAspectPreview instead
	of a GimpZoomPreview (bug #356716).

2007-07-27  Raphaël Quinet  <raphael@gimp.org>

	* tools/Makefile.am (test_clipboard_SOURCES)
	* libgimpthumb/Makefile.am (gimp_thumbnail_list_SOURCES): fixed
	typos: SURCES -> SOURCES.

2007-07-27  Raphaël Quinet  <raphael@gimp.org>

	* plug-ins/jpeg/jpeg-quality.c (jpeg_detect_quality): simplify the
	formula so that it returns a slightly lower estimated quality when
	there is no exact match with the IJG quantization tables.

2007-07-27  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: factored out utility